Ultima actualizacion segunda parte parcial labo

--- a/Mascotas/Mascotas.cbp
+++ b/Mascotas/Mascotas.cbp
@@ -35,6 +35,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="colores.h" />
+		<Unit filename="dataWarehouse.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="dataWarehouse.h" />
 		<Unit filename="fecha.c">
 			<Option compilerVar="CC" />
 		</Unit>
